--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -5,6 +5,7 @@
 \usepackage{algorithmic}
 \usepackage{balance}
 \usepackage{booktabs}
+\usepackage{tabularx}
 \usepackage{multirow}
 \usepackage[caption=false,font=normalsize,labelfont=sf,textfont=sf]{subfig}
 \usepackage{enumitem}
@@ -13,11 +14,15 @@
 \usepackage{cite}
 \usepackage{array}
 \usepackage{graphicx}
+\usepackage{balance}
+\usepackage{caption}
+
+\captionsetup[table]{skip=6pt}
 \hyphenation{op-tical net-works semi-conduc-tor IEEE-Xplore}
 \graphicspath{ {./img/} }
 \newcommand{\BibTeX}{\textrm{B \kern-.05em \textsc{i \kern-.025em b} \kern-.08em
 T \kern-.1667em \lower.7ex \hbox{E} \kern-.125emX}}
-\usepackage{balance}
+\newcommand{\tabitem}{~~\llap{\textbullet}~~}
 
 % Document
 \begin{document}
