--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -19,7 +19,11 @@ pages = {1183-1210}
 @article{tancredi2011fsmcrit,
   title={A hierarchical Bayesian approach to record linkage and population size problems},
   author={Tancredi, Andrea and Liseo, Brunero},
-  year={2011}
+  year={2011},
+  journal = {The Annals of Applied Statistics},
+  number = {2B},
+  pages = {1553--1585},
+  publisher = {Institute of Mathematical Statistics},
 }
 
 @article{winkler2014matching,
@@ -61,7 +65,11 @@ pages = {1183-1210}
 @article{sad2014fsmdup,
   title={Detecting duplicates in a homicide registry using a Bayesian partitioning approach},
   author={Sadinle, Mauricio},
-  year={2014}
+  year={2014},
+  journal = {The Annals of Applied Statistics},
+  number = {4},
+  pages = {2404--2434},
+  publisher = {Institute of Mathematical Statistics},
 }
 @book{Tal11,
   title={Entity resolution and information quality},
