er-metrics: add a few paragraphs on career exploration

--- a/articles/er-metrics-library/er-general.bib
+++ b/articles/er-metrics-library/er-general.bib
@@ -102,3 +102,13 @@
   year={2006},
   organization={Springer}
 }
+@article{chen2021careerexploration,
+  author={Chen, Huaruo  and Liu, Fei  and Wen, Ya  and Ling, Ling  and Chen, Shi  and Ling, Hairong  and Gu, Xueying },
+  title={Career Exploration of High School Students: Status Quo, Challenges, and Coping Model},
+  journal={Frontiers in Psychology},
+  volume={12},
+  year={2021},
+  url={https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2021.672303},
+  doi={10.3389/fpsyg.2021.672303},
+  issn={1664-1078},
+}
