--- a/articles/er-metrics-library/main.tex
+++ b/articles/er-metrics-library/main.tex
@@ -31,7 +31,7 @@
 \begin{document}
     \title{PyResolveMetrics: A Standards-Compliant and Efficient Approach to Entity Resolution Metrics}
     \author{
-        \authorname{Andrei Olar\sup{1}\orcidAuthor{0009`-0006`-7913`-9276}}
+        \authorname{Andrei Olar\sup{1}\orcidAuthor{0009-0006-7913-9276}}
         \affiliation{\sup{1}Faculty of Computer Science, Babes-Bolyai University}
         \email{\{andrei.olar\}@ubbcluj.ro}
     }
