--- a/articles/er-metrics-library/01_article.tex
+++ b/articles/er-metrics-library/01_article.tex
@@ -86,8 +86,8 @@
     personalized learning by tracking a student's preferences across learning
     domains might qualify as fields of study in their own right.
     
-    For example,~\cite{chen2021careerexploration} points out the importance of
-    University and professional information for career exploration.
+    For example, the work of~\cite{chen2021careerexploration} points out the
+    importance of University and professional information for career exploration.
     Their survey highlights that matching the educational offering to fit
     student goals leads to a higher chance of students developing successful
     careers.
@@ -898,8 +898,7 @@
     New models might also bring to light new interesting metrics to
     measure the performance of entity resolution tasks.
     Variation of information\cite{meila2007vi} and the generalized merge
-    distance\cite{Men10} are two examples of distance-based metrics for entity
-    that we would like to implement.
+    distance\cite{Men10} are two such examples.
 
     \bibliographystyle{apalike}
     {
