build docs on push

--- a/articles/er-metrics-library/01_article.tex
+++ b/articles/er-metrics-library/01_article.tex
@@ -647,6 +647,8 @@
     All that's left is to apply the PPJoin algorithm on DG1 and DG2 and plot the
     values of the metrics provided by the library for values of $t$ in the
     interval $\rinterval{0}{1}$ at increments of $0.01$.
+    The plots of the outcome are available
+    \href{https://github.com/matchescu/py-resolve-metrics}{on GitHub}.
 
     \begin{figure*}
         \begin{minipage}{0.32\textwidth}
