--- a/articles/er-metrics-library/02_references.bib
+++ b/articles/er-metrics-library/02_references.bib
@@ -64,10 +64,26 @@
 
 @misc{expdata2023,
   title        = {Experiment Data},
-  author       = {Experiment Data},
+  author       = {PyResolveMetrics},
   year         = {2023},
   howpublished = {\url{https://github.com/matchescu/experiment-data}},
   note         = {Online; accessed 25.10.2023}
+}
+
+@misc{sampleplots2024,
+  title        = {PyResolveMetrics PPJoin Plots on Sample Data},
+  author       = {PyResolveMetrics-PPJoin-Plots},
+  year         = {2024},
+  howpublished = {\url{https://www.cs.ubbcluj.ro/~andrei.olar/article-data/er-metrics-library/#sample-data-metrics}},
+  note         = {Online; accessed 18.02.2024}
+}
+
+@misc{perfgraphs2024,
+  title        = {PyResolveMetrics Performance Data},
+  author       = {PyResolveMetrics-Performance},
+  year         = {2024},
+  howpublished = {\url{https://www.cs.ubbcluj.ro/~andrei.olar/article-data/er-metrics-library/#performance-data}},
+  note         = {Online; accessed 18.02.2024}
 }
 
 @article{fever2009,
