downsize article. extract appendix. clean up references

--- a/articles/er-metrics-library/03_references.bib
+++ b/articles/er-metrics-library/03_references.bib
@@ -64,10 +64,18 @@
 
 @misc{expdata2023,
   title        = {Experiment Data},
-  author       = {Experiment Data},
+  author       = {Olar, Andrei},
   year         = {2023},
   howpublished = {\url{https://github.com/matchescu/experiment-data}},
   note         = {Online; accessed 25.10.2023}
+}
+
+@misc{appendix2024,
+  title        = {PyResolveMetrics Appendix},
+  author       = {Olar, Andrei},
+  year         = {2024},
+  howpublished = {\url{\appendixurl}},
+  note         = {Online; accessed 19.02.2024}
 }
 
 @article{fever2009,
