add author information to appendix

--- a/articles/er-metrics-library/02_appendix.tex
+++ b/articles/er-metrics-library/02_appendix.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,twoside]{article}
+\documentclass{article}
 
 \usepackage{balance}
 \usepackage{epsfig}
@@ -23,16 +23,26 @@
 \usepackage[font=scriptsize]{caption}
 \usepackage[bottom]{footmisc}
 
-\usepackage{SCITEPRESS}
-
-
 \graphicspath{ {./img/} }
 \intervalconfig{
     soft open fences,
 }
 
+\title{PyResolveMetrics: Appendix}
+\author{
+    Andrei Olar (andrei.olar@ubbcluj.ro)\\
+    Laura Dio\c san (laura.diosan@ubbcluj.ro)\\
+    \\
+    Faculty of Mathematics and Computer Science\\
+    Babe\c s-Bolyai University\\
+    Cluj-Napoca
+}
+\date{\today}
+
 \begin{document}
-\title{Appendix}
+
+\maketitle
+
 \section{PyResolveMetrics Technology}\label{appendix:technology}
     The proposed library is implemented using the Python programming
     language (version 3.11)\cite{python}.
