fix also...also expression

--- a/articles/er-metrics-library/02_appendix.tex
+++ b/articles/er-metrics-library/02_appendix.tex
@@ -297,7 +297,7 @@
     Notice that computing the Rand Index and the Adjusted Rand Index are the
     most onerous operations by far.
 
-    We also take note that the \texttt{\char`_convert\char`_to\char`_algebraic}
+    We take note that the \texttt{\char`_convert\char`_to\char`_algebraic}
     function is also a large CPU time consumer.
     This function checks whether the metrics are computed on two partitions over
     the same set.
