--- a/articles/er-evaluation-models/research-questions.tex
+++ b/articles/er-evaluation-models/research-questions.tex
@@ -38,15 +38,18 @@ observer is key in our physical universe~\cite{schrodinger1926}.
 Perhaps we can find inspiration for understanding entity resolution quality in
 Schrodinger's insight.
 
-We notice that there are multiple models that describe entity resolution.
-Each of these models uses the tools that are available to it as part of its
-theoretical foundation.
-Some use probabilities, some use graphs and some use sets and linear algebra.
-Each of them presents the human user with a unique perspective over how entity
-resolution functions, a perspective that includes the presentation of the
-outcomes of entity resolution.
-On the other hand, these models are generic: all entity resolution models apply
-to all entity resolution solutions.
+There are multiple models that describe entity resolution.
+Each theoretical model's job is to describe something (in our case, entity
+resolution) using existing notions.
+Some use probabilities, some use linear algebra and some use graphs.
+All of them describe entity resolution completely.
+The depth at which they are able to describe entity resolution depends on the
+allowances of the tools they use.
+Entity resolution is described better by richer data structures and more complex
+processes.
+To this end, entity resolution models make up two main families: matching models
+and clustering models.
+Our intent is to relate two models from each family.
 
 In this context, we may find conditions that originate in the entity resolution
 model itself rather than in reality, the data provided to the computer or the
